<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editSr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sr"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editDr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dr"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/condition"
        android:background="@color/conditionBox"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />

</LinearLayout>
