<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userid"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/editSr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sr"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editDr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dr"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/condition"
        android:background="@color/conditionBox"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAddRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddTask" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundborder"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMonthtodate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center_horizontal"
            android:text="Month-to-date Average Reading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewSrtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/sr" />

            <TextView
                android:id="@+id/textViewSrAve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewDrtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/dr" />

            <TextView
                android:id="@+id/textViewDrAve"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewConditionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/condition" />

            <TextView
                android:id="@+id/textViewConditionAve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="N/A"
                android:inputType="textMultiLine"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvRecords"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
